--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@angular/service-worker": "~12.2.0",
+    "@fullcalendar/angular": "^5.10.0",
+    "@fullcalendar/daygrid": "^5.10.0",
+    "@fullcalendar/interaction": "^5.10.0",
     "chart.js": "^3.5.1",
     "font-awesome": "^4.7.0",
     "primeicons": "^4.1.0",
