--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fullcalendar/interaction": "^5.10.0",
     "chart.js": "^3.5.1",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.1",
     "primeicons": "^4.1.0",
     "primeng": "^12.2.1",
     "rxjs": "~6.6.0",
