--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
               "./node_modules/primeicons/primeicons.css",
               "./node_modules/primeng/resources/themes/nova/theme.css",
               "./node_modules/primeng/resources/primeng.min.css",
+              "./node_modules/fullcalendar/dist/fullcalendar.min.css",
               "src/styles.scss"
             ],
             "scripts": [
