--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@fullcalendar/angular": "^5.10.0",
     "@fullcalendar/daygrid": "^5.10.0",
     "@fullcalendar/interaction": "^5.10.0",
+    "@fullcalendar/list": "^5.10.0",
+    "@fullcalendar/timegrid": "^5.10.0",
     "chart.js": "^3.5.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.29.1",
