--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@fullcalendar/interaction": "^5.10.0",
     "@fullcalendar/list": "^5.10.0",
     "@fullcalendar/timegrid": "^5.10.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "bootstrap": "^5.1.3",
     "chart.js": "^3.5.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.29.1",
