add  full calendar bootstrap

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@angular/service-worker": "~12.2.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@fullcalendar/angular": "^5.10.0",
+    "@fullcalendar/bootstrap": "^5.10.1",
     "@fullcalendar/daygrid": "^5.10.0",
     "@fullcalendar/interaction": "^5.10.0",
     "@fullcalendar/list": "^5.10.0",
