--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -26,5 +26,19 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "restapi",
+      "urls": [
+        "https://expenses-api-2312.herokuapp.com"
+      ],
+      "cacheConfig": {
+        "strategy": "freshness",
+        "maxSize": 100,
+        "maxAge": "3d",
+        "timeout": "20s"
+      }
+    }
   ]
 }
