--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "start-pwa": "ng build --prod && http-server -p 8080 -c-1 dist/billFold-client",
-    "predeploy": "ng build --prod --base-href=/billFold-client/",
-    "deploy": "npx gh-pages -d dist/billFold-client"
+    "predeploy": "ng build --prod --base-href https://gcy2312.github.io/billFold",
+    "deploy": "npx angular-cli-ghpages --dir=dist/billFold-client"
   },
   "private": true,
   "homepage": "https://gcy2312.github.io/billFold",
@@ -50,7 +50,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
-    "angular-cli-ghpages": "^1.0.0-rc.2",
+    "angular-cli-ghpages": "^1.0.0",
     "gh-pages": "^3.2.3",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
